--- a/Prepare_Dependency_Gen.ipynb
+++ b/Prepare_Dependency_Gen.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "The result of the process is a [NetworkX](https://networkx.github.io) Graph where the nodes are dataflows, sources and entities, the edges reflect the relationships.\n",
     "\n",
-    "The final Graph is converted to a [DOT](https://en.wikipedia.org/wiki/DOT_(graph_description_language) file and rendered to the png shown here using the dot.exe command installed with [Graphvix](https://www.graphviz.org/).\n",
+    "The final Graph is converted to a [DOT](https://en.wikipedia.org/wiki/DOT_(graph_description_language) file and rendered to the png shown here using the dot.exe command installed with [Graphviz](https://www.graphviz.org/).\n",
     "\n",
     "```bash\n",
     "dot.exe -Tpng -o prod_stg_compsych_member_t.png prod_stg_compsych_member_t.dot\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +638,7 @@
     "    # Add LOADER / STORE nodes\n",
     "    p = get_package_nodes(con, meta, bundle_nid)\n",
     "    \n",
-    "    # Add LOADER and STORE nodes to world map\n",
+    "    # Add LOADER and STORE nodes to graph\n",
     "    for n in p:\n",
     "        \n",
     "        id = n.nid\n",
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 41,
    "metadata": {
     "scrolled": true
    },
@@ -772,7 +772,8 @@
       "Graph already has entity 18091, US_Derived.stg_compsych_sso_eligibility_t\n",
       "Graph already has entity 18093, US_Derived.stg_compsych_sso_eligibility_temp_t\n",
       "Graph already has entity 18091, US_Derived.stg_compsych_sso_eligibility_t\n",
-      "11 nodes added to DiGraph\n"
+      "11 nodes added to DiGraph\n",
+      "Finished\n"
      ]
     }
    ],
@@ -792,9 +793,9 @@
     "    print(f'{len(W.nodes)} nodes added to DiGraph')\n",
     "\n",
     "    # Write output dot file\n",
-    "\n",
+    "    write_dot(W, f'{sname}.dot')\n",
     "    \n",
-    "    write_dot(W, f'{sname}.dot')"
+    "    print(\"Finished\")"
    ]
   },
   {
