Corrected markdown error

--- a/Prepare_Dependency_Gen.ipynb
+++ b/Prepare_Dependency_Gen.ipynb
@@ -550,7 +550,7 @@
     "\n",
     "The Networkx DiGraph is built up as throughout the process adding nodes for Sources, Entities and Dataflows as they are first encountered.\n",
     "\n",
-    "The node ids are the nid's from the related pd_bundle (Dataflow), pd_source (Source) and pd_entity (Entity) tables prefixes with the characters 'b_', 's_' and 'e_' respectively.\n",
+    "The node ids are the nid's from the related `pd_bundle` (Dataflow), `pd_source` (Source) and `pd_entity` (Entity) tables prefixes with the characters `b_`, `s_` and `e_` respectively.\n",
     "\n",
     "Edges are created between nodes to show the node relationships."
    ]
