Converted images to SVG

--- a/Prepare_Dependency_Gen.ipynb
+++ b/Prepare_Dependency_Gen.ipynb
@@ -31,7 +31,7 @@
     "\n",
     "## Sample output\n",
     "\n",
-    "![dataflow](legend.png) ![dataflow](prod_stg_compsych_member_t.png)"
+    "![dataflow](legend.svg) ![dataflow](prod_stg_compsych_member_t.svg)"
    ]
   },
   {
