Code and markdown tidy up

--- a/Prepare_Dependency_Gen.ipynb
+++ b/Prepare_Dependency_Gen.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "The result of the process is a [NetworkX](https://networkx.github.io) Graph where the nodes are dataflows, sources and entities, the edges reflect the relationships.\n",
     "\n",
-    "The final Graph is converted to a [DOT](https://en.wikipedia.org/wiki/DOT_(graph_description_language) file and rendered to the png shown here using the dot.exe command installed with [Graphviz](https://www.graphviz.org/).\n",
+    "The final Graph is converted to a [DOT](https://en.wikipedia.org/wiki/DOT_(graph_description_language)) file and rendered to the png shown here using the dot.exe command installed with [Graphviz](https://www.graphviz.org/).\n",
     "\n",
     "```bash\n",
     "dot.exe -Tpng -o prod_stg_compsych_member_t.png prod_stg_compsych_member_t.dot\n",
@@ -71,12 +71,13 @@
     "import json\n",
     "import datetime as dt\n",
     "import os\n",
-    "import yaml"
+    "import yaml\n",
+    "import sys"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,12 +113,12 @@
    "source": [
     "## Helper Functions\n",
     "\n",
-    "Most of these functions are helper functions in accessing the Podium metadata, the function where the actual work is done is the `get_bundle()` function."
+    "Most of these functions are helper functions in accessing the Podium metadata database, the function where the actual work is done is the `get_bundle()` function."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,9 +509,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:5: YAMLLoadWarning: calling yaml.load() without Loader=... is deprecated, as the default Loader is unsafe. Please read https://msg.pyyaml.org/load for full details.\n",
+      "  \"\"\"\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "cfg = get_podium_cfg(open('pd_cfg.yaml', 'r'))\n",
@@ -520,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,7 +641,7 @@
     "    \n",
     "    W.add_node(bundle_node_key,\n",
     "               nid=bundle_nid,\n",
-    "               sname=bundle_sname, \n",
+    "               # sname=bundle_sname, \n",
     "               label=bundle_sname, \n",
     "               n_type='bundle',\n",
     "               shape=\"box\",\n",
@@ -677,7 +687,7 @@
     "                           n_type='entity',\n",
     "                           nid=entity_id,\n",
     "                           snid=source_id,\n",
-    "                           sname=entity.sname,\n",
+    "                           #sname=entity.sname,\n",
     "                           label=entity.sname,\n",
     "                           shape=\"ellipse\",\n",
     "                           color=\"lightgoldenrod1\")\n",
@@ -689,7 +699,7 @@
     "                    W.add_node(source_node_key,\n",
     "                           n_type='source',\n",
     "                           nid=source_id,\n",
-    "                           sname=source.sname,\n",
+    "                           #sname=source.sname,\n",
     "                           label=source.sname,\n",
     "                           shape=\"octagon\",\n",
     "                           color=\"palegreen2\")\n",
@@ -701,7 +711,7 @@
     "            else:\n",
     "                source_nid = W.node[entity_node_key]['snid']\n",
     "                source_node_key = f's_{source_nid}'\n",
-    "                print(f\"Graph already has entity {entity_id}, {W.node[source_node_key]['sname']}.{W.node[entity_node_key]['sname']}\")\n",
+    "                print(f\"Graph already has entity {entity_id}, {W.node[source_node_key]['label']}.{W.node[entity_node_key]['label']}\")\n",
     "\n",
     "            if (n_type == 'STORE'):                    \n",
     "                W.add_edge(bundle_node_key, entity_node_key)\n",
@@ -709,6 +719,51 @@
     "                W.add_edge(entity_node_key, bundle_node_key)\n",
     "            else:\n",
     "                print(f'ERROR {bundle_node_key}, {source_node_key}, {entity_node_key}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def subg(g, sg, n_type):\n",
+    "    \"\"\"Create a record type subgraph of the passsed node type\"\"\"\n",
+    "    \n",
+    "    \n",
+    "    label_list = [g.node[n]['label'] for n in g.nodes if g.node[n]['n_type'] == n_type]\n",
+    "    \n",
+    "    label_list.sort(key=lambda x: x.lower())\n",
+    "    \n",
+    "    # Start subgraph and header record of number of lines\n",
+    "    print(f'subgraph {sg} {{')\n",
+    "    \n",
+    "    print(f'r_{sg} [shape=record,label=\"{{')\n",
+    "    print(f'{len(label_list)} {n_type}')\n",
+    "    \n",
+    "    for i, label in enumerate(label_list):\n",
+    "        print(f'| {label}')\n",
+    "    \n",
+    "    # Close subgraph\n",
+    "    print('}\"];}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def write_record_dot(g, output_file=None):\n",
+    "    \n",
+    "    print(\"digraph g {\")\n",
+    "\n",
+    "    subg(g, \"s1\", \"bundle\")\n",
+    "    subg(g, \"s2\", \"source\")\n",
+    "    subg(g, \"s3\", \"entity\")\n",
+    "    \n",
+    "    print('}')\n",
+    "    "
    ]
   },
   {
@@ -720,23 +775,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
     "# final dataflow name and \"stop list\"\n",
-    "sname = 'prod_stg_compsych_member_t'\n",
+    "SEED = \"prod_stg_compsych_member_t\"\n",
     "\n",
-    "stop_wf_list = ['je70_chess_init_member_history_v',\n",
-    "                'je70_chess_copy_member_history_v',\n",
-    "                'je70_chess_history_cdc_v',\n",
-    "                'sp17_stg_compsych_member_cdc_t',\n",
-    "                'sp17_copy_stg_compsych_membe_t']"
+    "# The stop list should be zero or more dataflow names that are stoppers in the\n",
+    "# recursion. If a dataflow name in te STOPPER list is hit then the recursion will\n",
+    "# stop at that point.\n",
+    "STOPPERS = []"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 90,
    "metadata": {
     "scrolled": true
    },
@@ -746,34 +800,34 @@
      "output_type": "stream",
      "text": [
       "Processing starting point, dataflow prod_stg_compsych_member_t\n",
-      "Current dataflow prod_stg_Compsych_Member_T (52599)\n",
-      "\t52599, , prod_stg_Compsych_Member_T records 692816\n",
-      "\tModified by: SP17, Modified Date: 2018-11-13 12:58:03.577000-05:00, Version: 4\n",
-      "\tLast Start: 2018-12-03 12:36:07.258000-05:00, Last End: 2018-12-03 12:36:50.809000-05:00\n",
-      "18091 (0) STORE by init_stg_Compsych_Member_T\n",
-      "Current dataflow init_stg_Compsych_Member_T (54399)\n",
-      "\t54399, , init_stg_Compsych_Member_T records 731560\n",
-      "\tModified by: SP17, Modified Date: 2018-12-04 13:05:33.594000-05:00, Version: 8\n",
-      "\tLast Start: 2018-12-04 13:55:31.350000-05:00, Last End: 2018-12-04 14:01:00.242000-05:00\n",
-      "No STORE found for 18266\n",
-      "18091 (1) STORE by prod_copy_stg_compsych_sso_eligibility_t\n",
-      "Current dataflow prod_copy_stg_compsych_sso_eligibility_t (52612)\n",
-      "\t52612, , prod_copy_stg_compsych_sso_eligibility_t records 731560\n",
-      "\tModified by: SP17, Modified Date: 2018-11-13 12:59:18.682000-05:00, Version: 1\n",
-      "\tLast Start: 2018-12-04 13:44:50.488000-05:00, Last End: 2018-12-04 13:45:29.646000-05:00\n",
-      "Graph already has entity 18091, US_Derived.stg_compsych_sso_eligibility_t\n",
-      "18093 (0) STORE by prod_stg_compsych_sso_eligibility_cdc_t\n",
-      "Current dataflow prod_stg_compsych_sso_eligibility_cdc_t (52268)\n",
-      "\t52268, Constructs the stg_Compsych_Member_T History using the CDC transform., prod_stg_compsych_sso_eligibility_cdc_t records 1463120\n",
-      "\tModified by: SP17, Modified Date: 2018-12-04 12:10:08.840000-05:00, Version: 18\n",
-      "\tLast Start: 2018-12-04 14:56:22.111000-05:00, Last End: 2018-12-04 15:32:10.387000-05:00\n",
-      "No STORE found for 18266\n",
-      "Graph already has entity 18266, GWRRPT_PR.compsych_sso_eligibility_t\n",
-      "18091 (0) STORE by init_stg_Compsych_Member_T\n",
-      "18091 (1) STORE by prod_copy_stg_compsych_sso_eligibility_t\n",
-      "Graph already has entity 18091, US_Derived.stg_compsych_sso_eligibility_t\n",
-      "Graph already has entity 18093, US_Derived.stg_compsych_sso_eligibility_temp_t\n",
-      "Graph already has entity 18091, US_Derived.stg_compsych_sso_eligibility_t\n",
+      "Current dataflow prod_stg_Compsych_Member_T (6388)\n",
+      "\t6388, , prod_stg_Compsych_Member_T records 731560\n",
+      "\tModified by: je70, Modified Date: 2018-12-06 09:15:02.100000-05:00, Version: 4\n",
+      "\tLast Start: 2018-12-06 11:47:29.549000-05:00, Last End: 2018-12-06 11:48:08.551000-05:00\n",
+      "3954 (0) STORE by prod_copy_stg_compsych_sso_eligibility_t\n",
+      "Current dataflow prod_copy_stg_compsych_sso_eligibility_t (6384)\n",
+      "\t6384, , prod_copy_stg_compsych_sso_eligibility_t records 731560\n",
+      "\tModified by: je70, Modified Date: 2018-12-06 09:14:29.965000-05:00, Version: 1\n",
+      "\tLast Start: 2018-12-06 09:42:11.095000-05:00, Last End: 2018-12-06 09:42:44.479000-05:00\n",
+      "3956 (0) STORE by prod_stg_compsych_sso_eligibility_cdc_t\n",
+      "Current dataflow prod_stg_compsych_sso_eligibility_cdc_t (6352)\n",
+      "\t6352, Constructs the stg_Compsych_Member_T History using the CDC transform., prod_stg_compsych_sso_eligibility_cdc_t records 1463120\n",
+      "\tModified by: je70, Modified Date: 2018-12-06 09:13:45.707000-05:00, Version: 18\n",
+      "\tLast Start: 2018-12-06 09:34:27.803000-05:00, Last End: 2018-12-06 09:38:40.641000-05:00\n",
+      "No STORE found for 3943\n",
+      "3954 (0) STORE by prod_copy_stg_compsych_sso_eligibility_t\n",
+      "3954 (1) STORE by init_stg_Compsych_Member_T\n",
+      "Current dataflow init_stg_Compsych_Member_T (6347)\n",
+      "\t6347, , init_stg_Compsych_Member_T records 731560\n",
+      "\tModified by: je70, Modified Date: 2018-12-06 09:12:57.482000-05:00, Version: 8\n",
+      "\tLast Start: 2018-12-06 17:08:47.639000-05:00, Last End: 2018-12-06 17:13:31.924000-05:00\n",
+      "Graph already has entity 3954, US_Derived.stg_compsych_sso_eligibility_t\n",
+      "No STORE found for 3943\n",
+      "Graph already has entity 3943, GWRRPT_PR.compsych_sso_eligibility_t\n",
+      "Graph already has entity 3954, US_Derived.stg_compsych_sso_eligibility_t\n",
+      "Graph already has entity 3956, US_Derived.stg_compsych_sso_eligibility_temp_t\n",
+      "3954 (1) STORE by init_stg_Compsych_Member_T\n",
+      "Graph already has entity 3954, US_Derived.stg_compsych_sso_eligibility_t\n",
       "11 nodes added to DiGraph\n",
       "Finished\n"
      ]
@@ -786,25 +840,70 @@
     "\n",
     "    wf_list = []\n",
     "\n",
-    "    wf_list.append(sname.lower())\n",
-    "    print(f'Processing starting point, dataflow {sname}')\n",
+    "    wf_list.append(SEED.lower())\n",
+    "    print(f'Processing starting point, dataflow {SEED}')\n",
     "    \n",
-    "    get_bundle(con, meta, sname, W, wf_list, stop_wf_list)\n",
+    "    get_bundle(con, meta, SEED, W, wf_list, STOPPERS)\n",
     "    \n",
     "\n",
     "    print(f'{len(W.nodes)} nodes added to DiGraph')\n",
     "\n",
     "    # Write output dot file\n",
-    "    write_dot(W, f'{sname}.dot')\n",
+    "    write_dot(W, f'{SEED}.dot')\n",
+    "    \n",
+    "    # Write output GraphML file\n",
+    "    with open(f\"{SEED}.graphml\", \"wb\") as ofile:\n",
+    "        nx.write_graphml(W, ofile)\n",
     "    \n",
     "    print(\"Finished\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "digraph g {\n",
+      "subgraph s1 {\n",
+      "r_s1 [shape=record,label=\"{\n",
+      "4 bundle\n",
+      "| init_stg_Compsych_Member_T\n",
+      "| prod_copy_stg_compsych_sso_eligibility_t\n",
+      "| prod_stg_Compsych_Member_T\n",
+      "| prod_stg_compsych_sso_eligibility_cdc_t\n",
+      "}\"];}\n",
+      "subgraph s2 {\n",
+      "r_s2 [shape=record,label=\"{\n",
+      "2 source\n",
+      "| GWRRPT_PR\n",
+      "| US_Derived\n",
+      "}\"];}\n",
+      "subgraph s3 {\n",
+      "r_s3 [shape=record,label=\"{\n",
+      "5 entity\n",
+      "| compsych_sso_eligibility_t\n",
+      "| full_stg_Compsych_Member_Audit_T\n",
+      "| stg_Compsych_Member_T\n",
+      "| stg_compsych_sso_eligibility_t\n",
+      "| stg_compsych_sso_eligibility_temp_t\n",
+      "}\"];}\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "write_record_dot(W, f'{SEED}_record.dot')"
    ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -818,7 +917,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
