Added descriptive text to output diagram

--- a/Prepare_Dependency_Gen.ipynb
+++ b/Prepare_Dependency_Gen.ipynb
@@ -100,21 +100,35 @@
     "The expected yaml stream should be:\n",
     "\n",
     "```yaml\n",
+    "---\n",
     "pd_connect:\n",
-    "    user: 'user_name'\n",
-    "    password: 'password'\n",
-    "    db: 'podium_md'\n",
-    "    host: 'hostname'\n",
-    "    port: nnnn\n",
-    "    \n",
-    "styles:\n",
+    "    dr:\n",
+    "        user: 'user'\n",
+    "        pwd: 'pwd'\n",
+    "        db: 'podium_md'\n",
+    "        host: 'host.host.com'\n",
+    "        port: 5436\n",
+    "    dev:\n",
+    "        pd_connect:\n",
+    "        user: 'user'\n",
+    "        pwd: 'pwd'\n",
+    "        db: 'podium_md'\n",
+    "        host: 'host.host'\n",
+    "        port: 5436\n",
     "\n",
+    "styles:\n",
+    "    meta:\n",
+    "        fontname: 'arial'\n",
+    "        fontsize: 10\n",
+    "    meta_edge:\n",
+    "        fontname: 'arial'\n",
+    "        fontsize: 10\n",
     "    node:\n",
     "        fontname: 'arial'\n",
     "        fontsize: 12\n",
     "        bgcolor: '\"#ECF8B9\"'\n",
     "    source:\n",
-    "        shape: 'invhouse'\n",
+    "        shape: 'house'\n",
     "        style: 'filled'\n",
     "        fillcolor: '\"#D4E4F7\"'\n",
     "    entity_source:\n",
@@ -135,7 +149,8 @@
     "        store:\n",
     "            color: '\"#347B98\"'\n",
     "        source:\n",
-    "            color: '\"#092834\"\n",
+    "            color: '\"#092834\"'\n",
+    "\n",
     "```"
    ]
   },
@@ -150,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -771,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -798,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -823,12 +838,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
     "# final dataflow name and \"stop list\"\n",
-    "SEED = \"prod_stg_compsych_member_t\" # \"prod_stg_source_member_t\"\n",
+    "SEED = \"prod_stg_compsych_member_t\" # \"prod_stg_source_member_t\" # \n",
     "#STOPPERS = ('je70_chess_history_cdc_v',\n",
     "#               'je70_chess_init_member_history_v',\n",
     "#               'je70_chess_copy_member_history_v')\n",
@@ -842,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 99,
    "metadata": {
     "scrolled": true
    },
@@ -884,7 +899,7 @@
       "Graph already has entity 18091, US_Derived.stg_compsych_sso_eligibility_t\n",
       "Graph already has entity 18093, US_Derived.stg_compsych_sso_eligibility_temp_t\n",
       "Graph already has entity 18091, US_Derived.stg_compsych_sso_eligibility_t\n",
-      "16 nodes added to DiGraph\n",
+      "17 nodes added to DiGraph\n",
       "Finished\n"
      ]
     }
@@ -895,18 +910,26 @@
     "    W = nx.DiGraph()\n",
     "    \n",
     "    node_styles = cfg['styles']['node']\n",
+    "    edge_styles = cfg['styles']['meta_edge']\n",
+    "    meta_styles = cfg['styles']['meta']\n",
     "    \n",
-    "    W.add_node('node',\n",
-    "               fontname=node_styles['fontname'],\n",
-    "               bgcolor=node_styles['bgcolor'],\n",
-    "               fontsize=node_styles['fontsize'])\n",
+    "    now = dt.datetime.now()\n",
     "    \n",
+    "    \n",
+    "    meta_dict = {'shape': 'record', 'label': f'{{{now.strftime(\"%Y-%m-%d %H:%M\")} | {{<f0> SEED | <f1> {SEED}}}}}', **meta_styles}\n",
+    "    \n",
+    "    W.add_node('node', **node_styles)\n",
+    "    \n",
+    "    \n",
+    "    W.add_node('meta', **meta_dict)\n",
     "    W.add_node('source', **cfg['styles']['source'])\n",
     "    W.add_node('entity', **cfg['styles']['entity_source'])\n",
     "    W.add_node('dataflow', **cfg['styles']['bundle'])\n",
     "    W.add_node('target', **cfg['styles']['entity_target'])\n",
     "    \n",
-    "    W.add_edges_from((('source','entity'),('entity','dataflow'),('dataflow','target')))\n",
+    "    W.add_edges_from((('entity','source', {'label': 'belongs_to', **edge_styles}),\n",
+    "                      ('entity','dataflow', {'label': 'LOADER', **edge_styles}),\n",
+    "                      ('dataflow','target', {'label': 'STORE', **edge_styles})))\n",
     "        \n",
     "\n",
     "                 \n",
@@ -1022,6 +1045,33 @@
    "source": [
     "write_record_dot(W, f'{SEED}_record.dot')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[1;31mDocstring:\u001b[0m string, format -> new datetime parsed from a string (like time.strptime()).\n",
+       "\u001b[1;31mType:\u001b[0m      builtin_function_or_method\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "dt.datetime.strptime?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
