Changed Podium references to QDC

--- a/Prepare_Dependency_Gen.ipynb
+++ b/Prepare_Dependency_Gen.ipynb
@@ -8,17 +8,17 @@
     "\n",
     "## Introduction\n",
     "\n",
-    "This Jupyter Notebook demonstrates how it is possible to generate Podium dataflow / source / entity dependency tree from the Podium metadata database (in this case PostgreSQL) using Python.\n",
+    "This Jupyter Notebook demonstrates how it is possible to generate QDC dataflow / source / entity dependency tree from the QDC metadata database (in this case PostgreSQL) using Python.\n",
     "\n",
     "The starting point for the example output (below) is the name of a dataflow \"prod_stg_compsych_member_t\", this starting point should be the dataflow that you are intrested in determining it's predecessor dataflows.\n",
     "\n",
     "The process will look at the LOADERs in the starting point dataflow and look back up the dependency tree to determine the source of each of the LOADERs. \n",
     "\n",
-    "These sources can be a Podium Source / Entity or the output from a prior dataflow. \n",
+    "These sources can be a QDC Source / Entity or the output from a prior dataflow. \n",
     "\n",
     "Where the source is the output from a prior dataflow, the process recurses on itself until:\n",
     "\n",
-    "* There are only Podium Source / Entities remaining or\n",
+    "* There are only QDC Source / Entities remaining or\n",
     "* The source dataflow is in a stop list of dataflow names provided to the process.\n",
     "\n",
     "The result of the process is a [NetworkX](https://networkx.github.io) Graph where the nodes are dataflows, sources and entities, the edges reflect the relationships.\n",
@@ -89,9 +89,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Podium Database Connection and Styles\n",
+    "## QDC Database Connection and Styles\n",
     "\n",
-    "The Podium repository database connection details are specified in a yaml format and parsed by the `get_podium_cfg()` function below.\n",
+    "The QDC repository database connection details are specified in a yaml format and parsed by the `get_podium_cfg()` function below.\n",
     "\n",
     "The input to the function is a stream, this can be a string or an open file handle.\n",
     "\n",
@@ -160,12 +160,12 @@
    "source": [
     "## Helper Functions\n",
     "\n",
-    "Most of these functions are helper functions in accessing the Podium metadata database, the function where the actual work is done is the `get_bundle()` function."
+    "Most of these functions are helper functions in accessing the QDC metadata database, the function where the actual work is done is the `get_bundle()` function."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -813,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -838,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -857,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 45,
    "metadata": {
     "scrolled": true
    },
@@ -952,126 +952,6 @@
     "    \n",
     "    print(\"Finished\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "digraph g {\n",
-      "subgraph s1 {\n",
-      "r_s1 [shape=record,label=\"{\n",
-      "21 bundle\n",
-      "| init_stg_Chess_Member_T\n",
-      "| init_stg_Compass_Member_T\n",
-      "| init_stg_Compsych_Member_T\n",
-      "| init_stg_GroupFacts_Member_T\n",
-      "| init_stg_Oasis_Member_T\n",
-      "| prod_chess_copy_member_history_v\n",
-      "| prod_chess_history_cdc_v\n",
-      "| prod_chess_init_member_history_v\n",
-      "| prod_copy_stg_Compass_Member_T\n",
-      "| prod_copy_stg_compsych_sso_eligibility_t\n",
-      "| prod_oasis_copy_memberd_history_v\n",
-      "| prod_oasis_delta_memberd_history_v\n",
-      "| prod_oasis_init_memberd_history_v\n",
-      "| prod_stg_Chess_Member_T\n",
-      "| prod_stg_Compass_Member_CDC_T\n",
-      "| prod_stg_Compass_Member_Staging_T\n",
-      "| prod_stg_Compass_Member_T\n",
-      "| prod_stg_Compsych_Member_T\n",
-      "| prod_stg_compsych_sso_eligibility_cdc_t\n",
-      "| prod_stg_Oasis_Member_T\n",
-      "| prod_stg_source_Member_T\n",
-      "}\"];}\n",
-      "subgraph s2 {\n",
-      "r_s2 [shape=record,label=\"{\n",
-      "8 source\n",
-      "| CHESS_FILE_PR\n",
-      "| COMPASS_PR\n",
-      "| DWH_DWCORE_PR\n",
-      "| GFMBR_FILE_PR\n",
-      "| GWR_PR\n",
-      "| GWRRPT_PR\n",
-      "| OASIS_FILE_PR\n",
-      "| US_Derived\n",
-      "}\"];}\n",
-      "subgraph s3 {\n",
-      "r_s3 [shape=record,label=\"{\n",
-      "34 entity\n",
-      "| ADDRDATA\n",
-      "| CHESS_DELTA\n",
-      "| CHESS_FULL\n",
-      "| chess_full_source_duplicates_v\n",
-      "| chess_member_delta_audit_v\n",
-      "| chess_member_history_v\n",
-      "| compsych_sso_eligibility_t\n",
-      "| full_stg_Compsych_Member_Audit_T\n",
-      "| Gf_Member_Full\n",
-      "| MBR\n",
-      "| oasis_memberd_delta_audit_v\n",
-      "| oasis_memberd_history_v\n",
-      "| POL\n",
-      "| POL_MBR\n",
-      "| POL_MBR_STATUS\n",
-      "| REF_CODES\n",
-      "| state_trnsl_t\n",
-      "| stg_Chess_Member_T\n",
-      "| stg_Compass_Member_Audit_T\n",
-      "| stg_Compass_Member_Staging_T\n",
-      "| stg_Compass_Member_T\n",
-      "| stg_Compass_Member_Temp_T\n",
-      "| stg_Compsych_Member_T\n",
-      "| stg_compsych_sso_eligibility_t\n",
-      "| stg_compsych_sso_eligibility_temp_t\n",
-      "| stg_GroupFacts_Member_DL_T\n",
-      "| stg_Oasis_Member_T\n",
-      "| stg_source_Member_Full_T\n",
-      "| stg_source_Member_T\n",
-      "| stg_Telephonic_Member_DL_T\n",
-      "| tmp_chess_member_history_cdc\n",
-      "| tmp_oasis_memberd_delta_history_v\n",
-      "| usmemberd\n",
-      "| usmemberd_delta\n",
-      "}\"];}\n",
-      "}\n"
-     ]
-    }
-   ],
-   "source": [
-    "write_record_dot(W, f'{SEED}_record.dot')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\u001b[1;31mDocstring:\u001b[0m string, format -> new datetime parsed from a string (like time.strptime()).\n",
-       "\u001b[1;31mType:\u001b[0m      builtin_function_or_method\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "dt.datetime.strptime?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
